demo/us-east-1/describe-security-groups.json
{
    "SecurityGroups": [
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "Database", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 5432, 
                    "IpRanges": [], 
                    "ToPort": 5432, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "123456789012", 
                            "GroupId": "sg-00000004"
                        }
                    ], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "Database", 
            "VpcId": "vpc-12345678", 
            "OwnerId": "123456789012", 
            "GroupId": "sg-00000005"
        },
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "Internal web", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 8000, 
                    "IpRanges": [], 
                    "ToPort": 8000, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "123456789012", 
                            "GroupId": "sg-00000003"
                        },
                        {
                            "UserId": "123456789012", 
                            "GroupId": "sg-00000002"
                        }
                    ], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "Internal web", 
            "VpcId": "vpc-12345678", 
            "OwnerId": "123456789012", 
            "GroupId": "sg-00000004"
        },
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "Public web access", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 443, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 443, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "Public web", 
            "VpcId": "vpc-12345678", 
            "OwnerId": "123456789012", 
            "GroupId": "sg-00000003"
        },
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "Only allow SSH from the offices", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "1.1.1.1/32"
                        },
                        {
                            "CidrIp": "2.2.2.2/28"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "Bastion", 
            "VpcId": "vpc-12345678", 
            "OwnerId": "123456789012", 
            "GroupId": "sg-00000002"
        },
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "default VPC security group", 
            "IpPermissions": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [], 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "123456789012", 
                            "GroupId": "sg-00000001"
                        }
                    ], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "default", 
            "VpcId": "vpc-12345678", 
            "OwnerId": "123456789012", 
            "GroupId": "sg-00000001"
        }
    ]
}
